--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rails_yelp_mvp",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
